tests/integration/features/reqif/profiles/p01_sdoc/end_to_end/90_legacy_section_not_supported_anymore/test.itest
RUN: %expect_exit 1 %strictdoc export --formats=reqif-sdoc %S/sample.sdoc 2>&1 | filecheck %s

CHECK: error: [SECTION] tags are deprecated when using ReqIF export/import. Use [[SECTION]] tags instead.
